feat : verification link done

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@node-rs/argon2": "^1.8.0",
     "@node-rs/bcrypt": "^1.10.1",
     "@prisma/client": "^5.12.1",
+    "@types/jsonwebtoken": "^9.0.6",
+    "jsonwebtoken": "^9.0.2",
     "lucia": "^3.1.1",
     "next": "14.1.4",
     "oslo": "^1.2.0",
